toriaezu commit
